--- a/src/app/pages/view-explanation/view-explanation.component.scss
+++ b/src/app/pages/view-explanation/view-explanation.component.scss
@@ -1,15 +1,16 @@
 @import "../../../constants";
 
 :host {
-  height: calc(100vh - $headerHeight);
-  width: 100vw;
+  .view-explanation {
+    height: 100vh;
+    width: 100vw;
+  }
 
   .presentation {
     position: fixed;
     left: 0;
-    top: $headerHeight;
     width: 100vw;
-    height: calc(100vh - $headerHeight);
+    height: 100vh;
 
     ::ng-deep iframe {
       width: 100%;
@@ -22,7 +23,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    height: calc(100vh - $headerHeight);
+    height: 100vh;
     width: 100vw;
     background-color: $viewColor;
   }
